--- a/style/index.css
+++ b/style/index.css
@@ -84,3 +84,46 @@ body{
 .search-btn:hover{
     background: #b54507;
 }
+
+
+/**/
+
+.meal-result{
+    margin-top: 4rem;
+}
+#meal{
+    margin: 2.4rem 0;
+}
+.meal-item{
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 3px 14px 21px -8px rgba(0, 0, 0, 0.9);
+    margin: 2rem 0;
+}
+.meal-img img{
+    width: 100%;
+    display: block;
+}
+.meal-name{
+    padding: 1.5rem 0.5rem;
+}
+.meal-name h3{
+    font-size: 1.5rem;
+}
+.recipe-btn{
+    text-decoration: none;
+    color: #fff;
+    background: #d65108;
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 0.75rem 0;
+    display: block;
+    width: 175px;
+    margin: 1rem auto;
+    border-radius: 2rem;
+    transition: all 0.4s linear;
+
+}
+.recipe-btn:hover{
+    background: #b54507;
+}
