--- a/style/index.css
+++ b/style/index.css
@@ -126,3 +126,19 @@ body{
 .recipe-btn:hover{
     background: #b54507;
 }
+
+/* meal details */
+.meal-details{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    background: #d65108;
+    border-radius: 1rem;
+    width: 90%;
+    height: 90%;
+    overflow-y: scroll;
+    padding: 2rem 0;
+}
