--- a/style/index.css
+++ b/style/index.css
@@ -142,3 +142,31 @@ body{
     overflow-y: scroll;
     padding: 2rem 0;
 }
+
+
+/* js elements */
+.showRecipe{
+    display: block;
+}
+
+.meal-details-content{
+    margin: 2rem;
+}
+.meal-details-content p:not(.recipe-category){
+    padding: 1rem 0;
+}
+.recipe-close-btn{
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.8rem;
+    background: #fff;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+}
