--- a/style/index.css
+++ b/style/index.css
@@ -170,3 +170,41 @@ body{
     justify-content: center;
     opacity: 0.9;
 }
+.recipe-title{
+    letter-spacing: 1px;
+    padding-bottom: 1rem;
+}
+
+.recipe-category{
+    background: #fff;
+    font-weight: 600;
+    color: #d65108;
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+
+}
+.recipe-category{
+    background: #fff;
+    font-weight: 600;
+    color: #d65108;
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+
+}
+.recipe-instruct{
+    padding: 1rem 0;
+    color: #000;
+    text-decoration: dashed;
+}
+.instructions{
+    color: #fff;
+}
+.recipe-meal-img img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+}
