--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -9,7 +11,7 @@ body{
     font-weight: 300;
     font-size: 1.05rem;
     line-height: 1.6;
-    font-family: 'Poppins', sans-serif;
+    font-family:  sans-serif;
 }
 
 
@@ -28,9 +30,9 @@ body{
     margin-bottom: 1rem;
 }
 .top-title{
-    font-size: 3rem;
-    font-style: italic;
-
+    font-size: 4rem;
+    font-family: "Aladin";
+    letter-spacing: 1px;
 }
 
 /*---*/
